<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    tools:context=".OurProductsActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_gelado"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cafe1"
            android:layout_width="368dp"
            android:layout_height="250dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cafe1"
            app:srcCompat="@drawable/cafe_gelado"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capuccino"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cafe2"
            android:layout_width="364dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/cafe2"
            app:srcCompat="@drawable/capuccino" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mocaccino"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cafe3"
            android:layout_width="387dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/cafe3"
            android:textSize="18sp"
            app:srcCompat="@drawable/mocaccino"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>
</ScrollView>