<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_beige"
    tools:context=".PhotoGalleryActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe1"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cafe1"
            android:layout_width="410dp"
            android:layout_height="250dp"
            android:contentDescription="@string/cafe1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/cafe1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe2"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cafe2"
            android:layout_width="358dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/cafe2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cafe2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe3"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/cafe3"
            android:layout_width="357dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/cafe3"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cafe3"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>
</ScrollView>